# calabi-yau

./: .gitignore  README.md  pyproject.toml  requirements.txt
cy/: __init__.py  ambient.py  builders.py  controls.py  hypersurface.py  iso.py  mesh.py  param_explorer.py  slice.py
examples/: iso_surface.py  plot_points.py  plot_surface.py  surface_param_explorer.py
